--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mana lapa</title>
+    <style>
+        p {
+            color: blueviolet;
+        }
+    </style>
 </head>
 <body>
     <h1>Esi sveicināts manā super lapā </h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis excepturi adipisci aspernatur perferendis, eum cumque alias, assumenda quia, quas odio sint praesentium unde porro dolorem nemo iusto rerum quos! Quos.</p>
+    <p>  Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis excepturi adipisci aspernatur perferendis, eum cumque alias, assumenda quia, quas odio sint praesentium unde porro dolorem nemo iusto rerum quos! Quos.</p>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim, ipsa dolores? Deleniti libero distinctio ut eligendi repellendus, eaque unde amet voluptates, aut vero iusto eum, officiis est nostrum esse a!</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium voluptatum molestiae iste fugiat repellat eos sit saepe debitis architecto distinctio delectus molestias similique laborum qui beatae, nulla in accusamus velit!</p>
 </body>
